welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:14: error: expected class or object definition
def lireCol1(){
^Array1:26: error: expected class or object definition
def avanceCol(){
^Array1:30: error: Unmatched closing brace '}' ignored here
}
^